==> caffedrine/NXP_KEA/SAMPLES/FRDM-KEAZ64/Code Project Examples for FRDM-KEAZ64/Lab11_LCD_Arduino_KEA64/src/LiquidCrystal.c <==
#include "derivative.h"
#include "LiquidCrystal.h"

LiquidCrystal LCD_Init(LiquidCrystal plcd){
	/* Set the RS pin as output and specify which pin it is via board-specific Arduino config file. */
	pinMode((int)plcd.rs.num, OUTPUT);
	/* we can save 1 pin by not using RW. Indicate by passing 255 instead of pin */
	if (plcd.rw.num != 255) {
	  pinMode((int)plcd.rw.num, OUTPUT);
	}
	/* Set the Enable Pin to an output */
	pinMode((int)plcd.enable.num, OUTPUT);

	/* Check whether LCD running four bit mode or eight bit mode. */
	if(plcd.BM==fourbitmode){
	    plcd.displayfunction = LCD_4BITMODE | LCD_1LINE | LCD_5x8DOTS;
	}else{
	    plcd.displayfunction = LCD_8BITMODE | LCD_1LINE | LCD_5x8DOTS;
	}
	//since in initSPI constructor we set _usingSPI to true and we run it first
	//from SPI constructor, we do nothing here otherwise we set it to false
	if(plcd.SM==spi_off){
		plcd.SM=spi_off;
	}else{
		plcd.SM=spi_on;
	}
	return plcd;
}

void LCD_Begin(LiquidCrystal* plcd, uint8_t col, uint8_t row, uint8_t dotsize){

	LiquidCrystal temp=*plcd; //Set a temporary variable and then any changes we make to temp we'll put back to plcd at the end
	temp.numcol=LCD_NUM_COL_1LINE; //Will reassign numcol if in 2 line mode
	/* Check whether user specified 1 or 2 rows to start with */
	if(row>1){
		temp.displayfunction |= LCD_2LINE;
		temp.numcol=LCD_NUM_COL_2LINES; //Columns can run off the LCD so there can be more than 16 columns
	}
	temp.numlines=row;
	temp.currline=0;
	temp.currcol=0;
	temp.leftedge=0; //The left edge of the screen starts at 0
	temp.rightedge=(col-1); //The last column starts out in column[col-1]
	/* For some 1 line displays you can select a 10 pixel high font. */
	if ((dotsize != 0) && (row == 1)) {
	  temp.displayfunction |= LCD_5x10DOTS;
	}
	/* SEE PAGE 45/46 FOR INITIALIZATION SPECIFICATION!
	** According to datasheet, we need at least 40ms after power rises above 2.7V
	** Before sending commands. Arduino can turn on way before 4.5V so we'll wait 50 */
	delayMicroseconds(50000);
	/* Now we pull both RS and R/W low to begin commands. */
	digitalWrite(temp.rs.num, LOW);
	temp.rs.state=LOW; //Record the pin state
	digitalWrite(temp.enable.num, LOW);
	temp.enable.state=LOW;
	if (temp.rw.num != 255) {
	  digitalWrite(temp.rw.num, LOW);
	  temp.rw.state=LOW;
	}
	/* Put LCD in 4 or 8 bit mode. */
	if (! (temp.displayfunction & LCD_8BITMODE)){
	    // this is according to the hitachi HD44780 datasheet
	    // figure 24, pg 46

	    // we start in 8bit mode, try to set 4 bit mode
	    LCD_Write4Bits(&temp, 0x03);
	    delayMicroseconds(4500); // wait min 4.1ms

	    // second try
	    LCD_Write4Bits(&temp, 0x03);
	    delayMicroseconds(4500); // wait min 4.1ms

	    // third go!
	    LCD_Write4Bits(&temp, 0x03);
	    delayMicroseconds(150);

	    // finally, set to 4-bit interface
	    LCD_Write4Bits(&temp, 0x02);
	}else {
	    // this is according to the hitachi HD44780 datasheet
	    // page 45 figure 23

	    // Send function set command sequence
	    LCD_Command(&temp, LCD_FUNCTIONSET | temp.displayfunction);
	    delayMicroseconds(4500);  // wait more than 4.1ms

	    // second try
	    LCD_Command(&temp, LCD_FUNCTIONSET | temp.displayfunction);
	    delayMicroseconds(150);

	    // third go
	    LCD_Command(&temp, LCD_FUNCTIONSET | temp.displayfunction);
	  }
	// finally, set # lines, font size, etc.
	  LCD_Command(&temp, LCD_FUNCTIONSET | temp.displayfunction);

	  // turn the display on with no cursor or blinking default
	  temp.displaycontrol = LCD_DISPLAYON | LCD_CURSOROFF | LCD_BLINKOFF;
	  LCD_Display(&temp);

	  // clear it off
	  LCD_Clear(&temp);

	  // Initialize to default text direction (for romance languages)
	  temp.displaymode = LCD_ENTRYLEFT | LCD_ENTRYSHIFTDECREMENT;
	  // set the entry mode
	  LCD_Command(&temp, LCD_ENTRYMODESET | temp.displaymode);

	  temp.direction=rightward; //Update the status flag for LCD going rightward
	  temp.alignment=leftaligned; //Because entry mode
	  temp.initialized=1; //This flag shows that LCD has been initialized

	*plcd=temp; //Update any changes you made to the LCD state after you passed it into this function
}

void LCD_Clear(LiquidCrystal * plcd){
	LiquidCrystal temp=*plcd;
	LCD_Command(plcd, LCD_CLEARDISPLAY);  // clear display, set cursor position to zero
	delayMicroseconds(2000);  // this command takes a long time!
	/* Reset all the row/column states. */
	temp.currcol=0;
	temp.currline=0;
	temp.leftedge=0;
	temp.rightedge=0xF;
	*plcd=temp; //Update the changes

}

void LCD_Home(LiquidCrystal * plcd){
	LiquidCrystal temp=*plcd;
	LCD_Command(plcd, LCD_RETURNHOME);  // set cursor position to zero
	delayMicroseconds(2000);  // this command takes a long time!
	/* Reset all the row/column states. */
	temp.currcol=0;
	temp.currline=0;
	temp.leftedge=0;
	temp.rightedge=0xF;
	*plcd=temp; //Update the changes
}

void LCD_SetCursor(LiquidCrystal * plcd, uint8_t col, uint8_t row){
	LiquidCrystal temp=*plcd;
	int row_offsets[] = { 0x00, 0x40, 0x14, 0x54 };
	  if ( row > temp.numlines ) {
	    row = temp.numlines-1;    // we count rows starting w/0
	  }

	  LCD_Command(&temp, LCD_SETDDRAMADDR | (col + row_offsets[row]));
	  temp.currline=row; //Update what the current line the LCD is in
	  temp.currcol=col;

	  /* If the scroll goes off the screen, reorient. First check where left/rightedge are. Are they in the normal range or
	   * in the wrap-around area (recall: DDRAM address wraps around at 0x28, where leftedge>rightedge? */

	  if(temp.leftedge>temp.rightedge){ //Check if the screen is in the wrap around area
		  /* If the scrren is in the wrap around area, then the cursor is offscreen if the currcol
		   * is greater than the rightedge address but less than the leftedge address.
		   */

		  if((temp.currcol<temp.leftedge) && (temp.currcol>temp.rightedge)){
			  /* If it is offscreen, reorient the LCD screen to fit according to whatever alignment is chosen. */
			  LCD_DisplayReorient(&temp);
		  }

	  }else{ //Or else it is in the non-wrap-around range, where leftedge<rightedge
		  /* If cursor is in normal range, the cursor is offscreen if its Dcurrcol is less than leftedge or greater than right edge. */
		  if((temp.currcol<temp.leftedge)||(temp.currcol>temp.rightedge)){
		  	  LCD_DisplayReorient(&temp);
	  	  }
	  }

	  *plcd = temp; //Propogate that to the pointer
}

void LCD_NoDisplay(LiquidCrystal * plcd){
	LiquidCrystal temp=*plcd;
	temp.displaycontrol &= ~LCD_DISPLAYON;
	LCD_Command(&temp, LCD_DISPLAYCONTROL | temp.displaycontrol);
	*plcd=temp; //Update the actual LiquidCrystal struct
}

void LCD_Display(LiquidCrystal * plcd){
	LiquidCrystal temp=*plcd;
	temp.displaycontrol |= LCD_DISPLAYON;
	LCD_Command(&temp, LCD_DISPLAYCONTROL | temp.displaycontrol);
	*plcd=temp;
}

void LCD_NoCursor(LiquidCrystal * plcd){
	LiquidCrystal temp=*plcd;
	temp.displaycontrol &= ~LCD_CURSORON;
	LCD_Command(&temp, LCD_DISPLAYCONTROL | temp.displaycontrol);
	*plcd=temp;
}

void LCD_Cursor(LiquidCrystal *plcd){
	LiquidCrystal temp=*plcd;
	temp.displaycontrol |= LCD_CURSORON;
	LCD_Command(&temp, LCD_DISPLAYCONTROL | temp.displaycontrol);
	*plcd=temp;
}

void LCD_NoBlink(LiquidCrystal * plcd){
	LiquidCrystal temp=*plcd;
	temp.displaycontrol &= ~LCD_BLINKON;
	LCD_Command(&temp, LCD_DISPLAYCONTROL | temp.displaycontrol);
	*plcd=temp;
}

void LCD_Blink(LiquidCrystal * plcd){
	LiquidCrystal temp=*plcd;
	temp.displaycontrol |= LCD_BLINKON;
	LCD_Command(&temp, LCD_DISPLAYCONTROL | temp.displaycontrol);
	*plcd=temp;
}

void LCD_ScrollDisplayLeft(LiquidCrystal * plcd){
	LiquidCrystal temp=*plcd;
	LCD_Command(plcd, LCD_CURSORSHIFT | LCD_DISPLAYMOVE | LCD_MOVELEFT); //Shift the display
	temp.rightedge=((temp.rightedge+1)%temp.numcol); //update the display boundaries. Do right edge first
	temp.leftedge=((temp.leftedge+1)%temp.numcol); //then do left edge
	*plcd=temp; //Propagate the change
}

void LCD_ScrollDisplayRight(LiquidCrystal * plcd){
	LiquidCrystal temp=*plcd;
	LCD_Command(plcd, LCD_CURSORSHIFT | LCD_DISPLAYMOVE | LCD_MOVERIGHT);
	//temp.rightedge=((temp.rightedge-1)%temp.numcol);
	//temp.leftedge=((temp.leftedge-1)%temp.numcol);
	temp.rightedge--; //0=1 in 8 bits is 255, which is 15d mod 0x28 so must implement the negative mod with a case statement
	if(temp.rightedge==255){
		temp.rightedge=(temp.numcol-1);
	}
	temp.leftedge--; //same for leftedge
	if(temp.leftedge==255){
		temp.leftedge=(temp.numcol-1);
	}
	*plcd=temp;
}

void LCD_AutoScroll(LiquidCrystal *plcd){
	LiquidCrystal temp=*plcd;
	temp.displaymode |= LCD_ENTRYSHIFTINCREMENT;
	LCD_Command(&temp, LCD_ENTRYMODESET | temp.displaymode);
	temp.alignment=rightaligned; //Update the alignment status
	*plcd=temp;
}

void LCD_NoAutoScroll(LiquidCrystal * plcd){
	LiquidCrystal temp=*plcd;
	temp.displaymode &= ~LCD_ENTRYSHIFTINCREMENT;
	LCD_Command(&temp, LCD_ENTRYMODESET | temp.displaymode);
	temp.alignment=leftaligned; //update the alignment status
	*plcd=temp;
}

void LCD_LeftToRight(LiquidCrystal * plcd){
	LiquidCrystal temp=*plcd;
	temp.displaymode |= LCD_ENTRYLEFT;
	LCD_Command(&temp, LCD_ENTRYMODESET | temp.displaymode);
	temp.direction=rightward; //update the direction for LCD to go rightward
	temp.alignment=leftaligned; //change the alignment flag
	*plcd=temp;
}

void LCD_RightToLeft(LiquidCrystal * plcd){
	LiquidCrystal temp=*plcd;
	temp.displaymode &= ~LCD_ENTRYLEFT;
	LCD_Command(&temp, LCD_ENTRYMODESET | temp.displaymode);
	temp.direction=leftward; //update the direction for it to go leftward
	temp.alignment=rightaligned; //change the alignment
	*plcd=temp;
}

void LCD_CreateChar(LiquidCrystal * plcd, uint8_t location, uint8_t charmap[]){
	location &= 0x7; // we only have 8 locations 0-7
	LCD_Command(plcd, LCD_SETCGRAMADDR | (location << 3));
	for (int i=0; i<8; i++) {
	  LCD_Write(plcd, charmap[i]);
	}
}

inline void LCD_Command(LiquidCrystal* plcd, uint8_t value){
	LCD_Send(plcd, value, LOW);
}

inline uint8_t LCD_Write(LiquidCrystal * plcd, uint8_t value){
	LiquidCrystal temp=*plcd;
	LCD_Send(plcd, value, HIGH);

	/* Everytime the LCD prints, the cursor position updates in the LCD RAM. Record this change in the status flag temp.direction. */
	LCD_PosCheck(&temp);
	*plcd=temp; //update these changes
	return 1; //Assume success
}

void LCD_Print(LiquidCrystal* plcd, char * str){
	uint32_t length=0; //Gets the length of the string

	/* If you get an empty string, print an empty message on LCD to that effect. Recursive. */
	if(*str=='\0'){
		LCD_Print(plcd, "There is nothing to print!");
		return;
	}

	/* Look for the null to set the length. */

	for(uint32_t i=0; *(str+i)!='\0'; i++){
		length++;
	}
	/* Now print it. */
	for(uint32_t i=0; i<length; i++){
		LCD_Write(plcd, *(str+i));
	}
}

void LCD_Send(LiquidCrystal * plcd, uint8_t value, uint8_t mode){
	LiquidCrystal temp=*plcd;
	if (temp.SM == spi_off)
	{
	  digitalWrite(temp.rs.num, mode);
	  //Then update that pin state
	  temp.rs.state=mode;

	    // if there is a RW pin indicated, set it low to Write
	  if (temp.rw.num != 255) {
	    digitalWrite(temp.rw.num, LOW);
	    temp.rw.state=LOW;
	  }

	  if (temp.displayfunction & LCD_8BITMODE) {
	    LCD_Write8Bits(&temp, value);
	  } else {
	    LCD_Write4Bits(&temp, value>>4);
	    LCD_Write4Bits(&temp, value);
	  }
	}
	else //we use SPI  ##########################################
	{
	  bitWrite(&temp, 1, mode); //set RS to mode. bit1=RS
	  LCD_SPISendOut(&temp);
	  //update the rs pin state
	  temp.rs.state=mode;

	//we are not using RW with SPI so we are not even bothering
	//or 8BITMODE so we go straight to write4bits
	  LCD_Write4Bits(&temp, value>>4);
	  LCD_Write4Bits(&temp, value);
	}
	*plcd=temp; //Give the actual pointer the new state
}

void LCD_Write4Bits(LiquidCrystal * plcd, uint8_t value){
	LiquidCrystal temp=*plcd;
	if (temp.SM == spi_off)
	{
	  for (int i = 0; i < 4; i++) {
	    pinMode(temp.dpins[i].num, OUTPUT);
	    digitalWrite(temp.dpins[i].num, (value >> i) & 0x01);
	    temp.dpins[i].state=((value>>i)&0x01); //update the value of the pin
	  }
	}
	else //we use SPI ##############################################
	{
	  for (int i = 4; i < 8; i++)
	  {
		//we put the four bits in the _bit_string
		bitWrite(&temp, i, ((value >> (i - 4)) & 0x01));
		temp.dpins[i-4].state=((value>>(i-4))&0x01); //update the value of each pin
	  }
		//and send it out
	  LCD_SPISendOut(&temp);
	}
	LCD_PulseEnable(&temp);
	*plcd=temp; //save the changes
}
